update library.properties description

--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Matrix Color Sensor Library
+name=Matrix Servo Extension Library
 version=1.0.0
 author=KKITC
 maintainer=Matrix Robotics & KKITC <service1@kkitc.net>
-sentence=Matrix Color Sensor Library
-paragraph=Matrix Color Sensor Library
+sentence=Matrix Servo Extension Library
+paragraph=Matrix Servo Extension Library
 category=Device Control
-url=https://github.com/Matrix-Robotics/MatrixColorSensor
+url=https://github.com/Matrix-Robotics/MatrixServoExtension
 architectures=*
