--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
-name=Matrix Servo Extension Library
+name=MatrixServoExtension
 version=1.0.0
 author=KKITC
 maintainer=Matrix Robotics & KKITC <service1@kkitc.net>
-sentence=Matrix Servo Extension Library
-paragraph=Matrix Servo Extension Library
+sentence=A 8 channel RC Servo controller.
+paragraph=Communicate by I2C interface.
 category=Device Control
 url=https://github.com/Matrix-Robotics/MatrixServoExtension
 architectures=*
