--- a/library.properties
+++ b/library.properties
@@ -3,7 +3,7 @@ version=1.0.0
 author=KKITC
 maintainer=Matrix Robotics & KKITC <service1@kkitc.net>
 sentence=A 8 channel RC Servo controller.
-paragraph=Communicate by I2C interface.
+paragraph=Support 8 channel/360 angle RC Servo control with battery voltage monitor.
 category=Device Control
 url=https://github.com/Matrix-Robotics/MatrixServoExtension
 architectures=*
