--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=MatrixServoExtension
+name=Matrix Servo Extension
 version=1.0.0
 author=KKITC
 maintainer=Matrix Robotics & KKITC <service1@kkitc.net>
